<resources>
    <string name="app_name">PortakalFitKal</string>
    <string name="egitmen">Eğitmen</string>
    <string name="sporcu">Sporcu</string>
    <string name="varolan">Üye Girişi</string>
    <string name="yenikayit">Yeni Kayıt</string>
    <string name="kaddi">Kullaniici Adi</string>
    <string name="sifre">Şifre</string>
    <string name="giris">Giriş</string>
    <string name="adı">Adı</string>
    <string name="soyad">Soyadı</string>
    <string name="stekrar">Şifre Tekrar</string>
    <string name="dogum">Doğum Tarihi</string>
    <string name="uzmanlik">Uzmanlık</string>
    <string name="numara">Telefon Numarası(+90)</string>
    <string name="tel">Telefon Numarası</string>
    <string name="boy">Boy(m)</string>
    <string name="kilo">Kilo(kg)</string>
    <string name="devam">Devam</string>
    <string name="program">Programınız</string>
    <string name="bilgiler">Bilgileriniz</string>
    <string name="yas">Yaş</string>
    <string name="vki">V.K.İ</string>
    <string name="guncelle">Güncelle</string>
    <string name="anasyf">Anasayfa</string>
    <string name="ogrenciler">Öğrencileriniz</string>
    <string name="bilgileri">Bilgileri</string>
    <string name="misafir">Misafir</string>
    <string name="alet">Aletlerimiz</string>
    <string name="cıkıs">Çıkış</string>
    <string name="geri">GERİ</string>
    <string name="sayfa2">S.2</string>
    <string name="sayfa3">S.3</string>
    <string name="silme">Öğrenciyi Sil</string>
    <string name="on">Açık</string>
    <string name="off">Kapalı</string>
    <string name="disconnect">Baglantı Kesildi</string>
    <string name="adim">Haftalık Adım Sayısı </string>
</resources>
