<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EgitmenyenikayitMainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A183468D"
        android:orientation="vertical">

        <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="107dp"
                app:srcCompat="@mipmap/portakalweb"
                tools:srcCompat="@mipmap/logofelan" />

        <EditText
                android:id="@+id/adi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/adı"
                android:inputType="textPersonName"
                android:textSize="18sp"
                android:translationY="10dp" />

        <EditText
                android:id="@+id/soyadi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/soyad"
                android:inputType="textPersonName"
                android:textSize="18sp"
                android:translationY="10dp" />

        <EditText
                android:id="@+id/kadi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/kaddi"
                android:inputType="textPersonName"
                android:textSize="18sp"
                android:translationY="10dp" />

        <EditText
                android:id="@+id/sifre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/sifre"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:translationY="10dp" />

        <EditText
                android:id="@+id/tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/numara"
                android:inputType="number"
                android:textSize="18sp"
                android:translationY="10dp" />

        <Button
                android:id="@+id/devam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF5722"
                android:gravity="center_horizontal|center_vertical"
                android:text="Kayıt Ol"
                android:textColor="#FFEB3B"
                android:textSize="18sp"
                android:translationY="15dp" />

        <Button
                android:id="@+id/geri"
                android:layout_width="114dp"
                android:layout_height="77dp"
                android:background="@mipmap/turuncusolok"
                android:text="@string/geri"
                android:textSize="10sp"
                android:translationX="210dp"
                android:translationY="20dp" />

    </LinearLayout>
</LinearLayout>