<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EgitmenogrencibilgiMainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#A183468D"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="123dp"
                app:srcCompat="@mipmap/portakalweb"
                tools:srcCompat="@mipmap/logofelan" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/ad"
                    android:layout_width="198dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/adı"
                    android:textSize="18sp" />

            <TextView
                    android:id="@+id/adi"
                    android:layout_width="214dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/soyad"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/soyad"
                    android:textSize="18sp" />

            <TextView
                    android:id="@+id/soyadi"
                    android:layout_width="71dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/tel"
                    android:layout_width="34dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tel"
                    android:textSize="18sp" />

            <TextView
                    android:id="@+id/telefon"
                    android:layout_width="44dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/kilo"
                    android:layout_width="34dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/kilo"
                    android:textSize="18sp" />

            <TextView
                    android:id="@+id/kilog"
                    android:layout_width="44dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/boy"
                    android:layout_width="34dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/boy"
                    android:textSize="18sp" />

            <TextView
                    android:id="@+id/boym"
                    android:layout_width="44dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/vücut"
                    android:layout_width="34dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vki"
                    android:textSize="18sp" />

            <TextView
                    android:id="@+id/vki"
                    android:layout_width="44dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

        </LinearLayout>


        <Button
                android:id="@+id/anas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF5722"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/anasyf"
                android:textColor="#FFEB3B"
                android:textSize="18sp"
                android:textStyle="bold" />

        <Button
                android:id="@+id/ogrencisil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFB300"
                android:text="@string/silme"
                android:textColor="#E53935"
                android:textSize="18sp"
                android:textStyle="bold" />

        <Button
                android:id="@+id/geri"
                android:layout_width="114dp"
                android:layout_height="77dp"
                android:background="@mipmap/turuncusolok"
                android:text="@string/geri"
                android:textSize="10sp"
                android:translationX="210dp"
                android:translationY="-10dp" />

    </LinearLayout>
</LinearLayout>