<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OgrencibilgilerMainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#A183468D"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/imageView"
                android:layout_width="272dp"
                android:layout_height="107dp"
                android:background="@mipmap/logofelan"
                android:translationX="15dp" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/adi"
                    android:layout_width="198dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/adı"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/ad"
                    android:layout_width="214dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/soyad"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/soyad"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/soyadi"
                    android:layout_width="71dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/kilo"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/kilo"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/kilog"
                    android:layout_width="182dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/boy"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/boy"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/boym"
                    android:layout_width="58dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/vucut"
                    android:layout_width="62dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vki"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/vki"
                    android:layout_width="74dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/tel"
                    android:layout_width="62dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tel"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/telefon"
                    android:layout_width="74dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:textStyle="bold" />
        </LinearLayout>

        <Button
                android:id="@+id/anas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF5722"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/anasyf"
                android:textColor="#FFEB3B"
                android:textSize="14sp"
                android:textStyle="bold" />

        <Button
                android:id="@+id/guncelle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#DFFF9800"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/guncelle"
                android:textSize="14sp"
                android:textStyle="bold" />

        <Button
                android:id="@+id/has"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#039BE5"
                android:text="@string/adim"
                android:textColor="#F4511E"
                android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>